fixing images links

--- a/blog/content/posts/2012-03-14-commodore-64.md
+++ b/blog/content/posts/2012-03-14-commodore-64.md
@@ -16,6 +16,6 @@ Con Fidel nos la pasamos muchos fines de semana transcribiendo programas en Basi
 
 A cada cual sus nostalgias. Mi primer carro lo compré hace solo dos años. Es un mazda 5. Solo abro el _capot_ para cambiar el líquido de los parabrisas, nunca se me ocurriría meterle la mano a nada más.
 
-[<img class="aligncenter size-medium wp-image-570" src="http://personal.network.crazyrobot.net/files/2012/03/batallas-240x300.jpg" alt="" width="240" height="300" />][1]
+[<img class="aligncenter size-medium wp-image-570" src="http://blog.crazyrobot.net/files/2012/03/batallas-240x300.jpg" alt="" width="240" height="300" />][1]
 
- [1]: http://personal.network.crazyrobot.net/files/2012/03/batallas.jpg
+ [1]: http://blog.crazyrobot.net/files/2012/03/batallas.jpg
