--- a/blog/content/posts/2012-10-05-seb.md
+++ b/blog/content/posts/2012-10-05-seb.md
@@ -13,7 +13,7 @@ categories:
 
 ---
 <div id="attachment_788" style="width: 310px" class="wp-caption aligncenter">
-  <a href="http://personal.network.crazyrobot.net/files/2012/10/sebastian.jpg"><img class="size-medium wp-image-788 " src="http://personal.network.crazyrobot.net/files/2012/10/sebastian-300x225.jpg" alt="" width="300" height="225" srcset="http://personal.network.crazyrobot.net/files/2012/10/sebastian-300x225.jpg 300w, http://personal.network.crazyrobot.net/files/2012/10/sebastian.jpg 640w" sizes="(max-width: 300px) 100vw, 300px" /></a>
+  <a href="http://blog.crazyrobot.net/files/2012/10/sebastian.jpg"><img class="size-medium wp-image-788 " src="http://blog.crazyrobot.net/files/2012/10/sebastian-300x225.jpg" alt="" width="300" height="225" srcset="http://blog.crazyrobot.net/files/2012/10/sebastian-300x225.jpg 300w, http://blog.crazyrobot.net/files/2012/10/sebastian.jpg 640w" sizes="(max-width: 300px) 100vw, 300px" /></a>
   
   <p class="wp-caption-text">
     Sebastián, a los 5 meses. Gordo adorado.
